--- a/index.html
+++ b/index.html
@@ -596,12 +596,14 @@
 					<p>I was born and raised in Hong Kong. I'm half British and half Filipino.</p>
 					<br>
 					<h1>School</h1>
-					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a tutorial and marking TA for CSC108.</p>
+					<p>I've completed my major in both computer science and economics for an honours bachelors of science. I've been a tutorial and marking TA for CSC108.</p>
 					<br>
 					<h1>Interests</h1>
-					<p>I'm into machine learning and full stack development, making standalone apps. Despite the adage about not reinventing the wheel, I try not to use external libraries, as these apps are more of an exercise of applying my knowledge. I wanna get a Raspberry PI and install apache so I can have a non-static website with more interactive applications that link different backend technologies like python and Java to my apps.</p>
+					<p>I'm into machine learning and full stack development, making standalone apps. I'm currently in to making nodejs apps with a react frontend.</p>
 					<br>
-					<p>I also like making animated SVGs in illustrator with css/js, watching tv (rip Suits) and playing league with friends.</p>
+					<p>I recently bought a raspberry pi, so hopefully I can get a static ip and host my website there for non-static web apps like <a href="https://github.com/peggalex/whisper" target="_blank">this</a> and <a href="https://github.com/peggalex/multiplayerShooter" target="_blank">this</a>.</p>
+					<br>
+					<p>I also like making animated SVGs in illustrator with css/js, cycling and playing league with friends.</p>
 					<br>
 				</div>
 				<div class='projects content' id='content_projects'>
@@ -642,6 +644,15 @@
 					<p>My friend wanted to bring her t-shirt business online, so I made a template website.</p>
 					<p>Written using React hooks, has stateful carousel and snap scroll.</p>
 					<p>Renders differently depending on media queries (mobile).</p>
+					<br>
+					<br>
+					<h1>Scotiabank Big Data AI competition</h1>
+					<p>I participated in a <a href="https://www.utm.utoronto.ca/imi/imi-events/big-data-ai-case-competition" target="_blank">competition</a> hosted by scotiabank to identify human traffickting pertaining to money laundering in bank data.</p>
+					<p>We <a href="https://www.utm.utoronto.ca/imi/news/results-are-2020-big-data-ai-case-competition" target="_blank">won</a> the first place prize of $3000.</p>
+					<p>They gave us real bank data and tasked us with classifying accounts.</p>
+					<p>Using neo4j, I parameterised the data with addition aggregation parameters.</p>
+					<p>Then, using scipy and numpy, I generated a normal multivariate cdf of the data, and from there it's just selecting outliers at the tails</p>
+					<p>Here are some <a href="https://peggalex.github.io/graphDemo" target="_blank">highlight slides</a> and the <a href="https://peggalex.github.io/BigDataCompPPT_Incorgnito.pdf">entire presentation</a>.</p>
 					<br>
 					<br>
 					<h1>Hong Kong SVG animation</h1>
