--- a/resume3.html
+++ b/resume3.html
@@ -110,6 +110,11 @@
 		font-size: 12px;
 	}
 
+	h2::after{
+		color: black;
+		content: '() = {';
+	}
+
 	span.tag.param {
 		font-family: 'Public Sans', sans-serif;
 		font-size: 12px;
@@ -185,7 +190,7 @@
 			<!--<span class='tag open'>div id='left' style=':width:40%;'</span>-->
 			<div id='education'>
 				<span class='tag open'>div id='education'</span>
-				<h2>education<span class='code'> ( ) = {</h2>
+				<h2>education</h2>
 				<div class='indented'>
 					<p>honorary bs | computer science <span class='and'>and</span> economics</p>
 					<p>university <span class='of'>of</span> toronto | <span class='num'>2016</span>-present</p>
@@ -199,7 +204,7 @@
 
 			<div id='coursework'>
 				<span class='tag open'>div id='coursework'</span>
-				<h2>coursework<span class='code'> ( ) = {</span></h2>
+				<h2>coursework</h2>
 
 				<div class='indented'>
 					<h3>computation</h3>
@@ -241,7 +246,7 @@
 
 			<div id='skills'>
 				<span class='tag open'>div id='skills'</span>
-				<h2>skills<span class='code'> ( ) = {</span></h2>
+				<h2>skills</h2>
 
 				<div class='indented'>
 
@@ -270,7 +275,7 @@
 			<!--<span class='tag open'>div id='right' style=':width:60%;'</span>-->
 			<div id='experience'>
 				<span class='tag open'>div id='experience'</span>
-				<h2>exprience<span class='code'> ( ) = {</h2>
+				<h2>exprience</h2>
 
 				<div class='indented'>
 					<h3>university <span class='of'>of</span> toronto | teaching assistant</h3>
@@ -323,7 +328,7 @@
 			</div>
 			<div id='links'>
 				<span class='tag open'>div id='links'</span>
-				<h2>links<span class='code'> ( ) = {</h2>
+				<h2>links</h2>
 
 				<div class='indented'>
 					<h3> email </h3>
