--- a/messenger.html
+++ b/messenger.html
@@ -353,9 +353,12 @@
 
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="lib/react.js"></script>
+	<!--<script src="lib/react-dom.js”."></script>
 	<script src="lib/react-dom.js"></script>
-	<script src="lib/babel.min.js"></script>
+	<script src="lib/babel.min.js"></script>-->
+	<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 </head>
 
 <body>
