--- a/index.html
+++ b/index.html
@@ -598,13 +598,20 @@
 					<h1>School</h1>
 					<p>I've completed my major in both computer science and economics for an honours bachelors of science. I've been a tutorial and marking TA for CSC108.</p>
 					<br>
-					<h1>Interests</h1>
-					<p>I'm into machine learning and full stack development, making standalone apps. I'm currently in to making nodejs apps with a react frontend.</p>
+					<h1>Me right now</h1>
+					<p>I'm into AI and full stack dev, trying to get a job.</p>
 					<br>
-					<p>I recently bought a raspberry pi, so hopefully I can get a static ip and host my website there for non-static web apps like <a href="https://github.com/peggalex/whisper" target="_blank">this</a> and <a href="https://github.com/peggalex/multiplayerShooter" target="_blank">this</a>.</p>
+					<p> I'm currently interested making nodejs apps with a react frontend, making the transition into the newer React hooks.</p>
 					<br>
-					<p>I also like making animated SVGs in illustrator with css/js, cycling and playing league with friends.</p>
+					<p>I recently bought a raspberry pi, so hopefully I can get a static ip and host my website there for non-static web apps. I just bought a domain <a href="https://alexpegg.com" target="_blank">https://alexpegg.com</a> for a dollar for a year (15 dollars a year after the first), and a dollar a month for a small server from <a href="https://www.ionos.ca/" target="_blank">Ionos</a>. I plan on migrating that stuff to the raspberry pi as soon as I figure it out.</p>
 					<br>
+					<p>I want to get some Wordpress experience, and my mum wants a website for her little side business so hopefully I can use that as an opportunity to learn. Those CMS sites like Wordpress and Squarespace make web design look really easy, I could learn a thing or two.</p>
+					<br>
+					<p> I made this site with self-learned html/css and before I took a university course in webdev. I want to change it into React hooks, and also make the layout a bit better. I want to add some of the css tricks I've picked up: snap-scrolling, media queries and css using rem/vw/vh -- right now a lot of sizing is hardcoded in px.</p>
+					<br>
+					<p>I also like making animated SVGs in illustrator with css/js, cycling and playing <a href="https://na.op.gg/summoner/userName=snaIex" target="_blank">league</a> with friends.</p>
+					<br>
+					<p> Go to the projects tab on the left to see some of the stuff I've made so far. </p>
 				</div>
 				<div class='projects content' id='content_projects'>
 					<h1>Microeconomics 2 Goods Model Grapher</h1>
@@ -617,12 +624,12 @@
 					<br>
 					<br>
 					<h1>Whisper</h1>
-					<p><a href="https://github.com/peggalex/whisper" target="_blank">https://github.com/peggalex/whisper</a></p>
+					<p><a href="https://alexpegg.com/whisper" target="_blank">https://alexpegg.com/whisper</a>, source: <a href="https://github.com/peggalex/whisper" target="_blank">https://github.com/peggalex/whisper</a></p>
 					<p> Messaging app that encrypts messages so the server can't see.</p>
 					<p> React frontend, nodejs backend with express and websockets. Sqlite database.</p>
 					<p> Search users, send friend requests, talk to friends and see whos online in real time.</p>
 					<p> Front and backend validation for express routing calls and websocket connections.</p>
-					<p> Encryption done with subtle.crypto, SHA256 & SHA512 for hashing, AEM with IV for encryption.</p>
+					<p> Encryption done with subtle.crypto.</p>
 					<br>
 					<br>
 					<h1>2048 Game</h1>
@@ -653,6 +660,24 @@
 					<p>Using neo4j, I parameterised the data with addition aggregation parameters.</p>
 					<p>Then, using scipy and numpy, I generated a normal multivariate cdf of the data, and from there it's just selecting outliers at the tails</p>
 					<p>Here are some <a href="https://peggalex.github.io/graphDemo" target="_blank">highlight slides</a> and the <a href="https://peggalex.github.io/BigDataCompPPT_Incorgnito.pdf">entire presentation</a>.</p>
+					<br>
+					<br>
+					<h1>Fortnite2D</h1>
+					<p> (!!!WORK IN PROGRESS!!!)</p>
+					<p><a href="https://alexpegg.com/ftd" target="_blank">https://alexpegg.com/ftd</a>, source: <a href="https://github.com/peggalex/multiplayerShooter" target="_blank">https://github.com/peggalex/multiplayerShooter</a></p>
+					<p> Multiplayer shooting game based off of fortnite.</p>
+					<p> React frontend (canvas for game), nodejs backend with express and websockets. Sqlite database.</p>
+					<p> Features graphics, sounds, weapons and ammo to pick up.</p>
+					<p> Front and backend validation for express routing calls and websocket connections.</p>
+					<p> This is the only project I put in my portfolio that was actually school work, as per <a href="http://142.1.200.148/~ta/assignments/03/index.php" target="_blank">this assignment</a>.</p>
+					<p> There's a lot I'd like to fix: </p>
+					<ul>
+						<li>I would like to redo the backend in typescript (never tried before).</li>
+						<li> The front end is currently in react (class components), I want to redo it in React hooks. </li>
+						<li> The assignment asked for a lot of fields in registration, I want to cut down on that. </li>
+						<li> Bug: network request to the server whenever audio played (even if preloaded property set). </li>
+						<li> Feature: Make weapons respawn automatically and add ring</li>
+					</ul>
 					<br>
 					<br>
 					<h1>Hong Kong SVG animation</h1>
