--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 					<br>
 					<p> I'm currently interested making nodejs apps with a react frontend, making the transition into the newer React hooks.</p>
 					<br>
-					<p>I recently bought a raspberry pi, so hopefully I can get a static ip and host my website there for non-static web apps. I just bought a domain <a href="https://alexpegg.com" target="_blank">https://alexpegg.com</a> for a dollar for a year (15 dollars a year after the first), and a dollar a month for a small server from <a href="https://www.ionos.ca/" target="_blank">Ionos</a>. I plan on migrating that stuff to the raspberry pi as soon as I figure it out.</p>
+					<p>I recently bought a raspberry pi, so hopefully I can get a static ip and host my website there for non-static web apps. I just bought a domain <a href="https://alexpegg.com" target="_blank">https://alexpegg.com</a> for a dollar for a year (15 dollars a year after the first), and a dollar a month for a small server from <a href="https://www.ionos.ca/" target="_blank">Ionos</a>. Got reverse proxy working with nginx and some nodejs apps like <a href="https://alexpegg.com/whisper" target="_blank">this</a> and <a href="https://alexpegg.com/ftd" target="_blank">this</a>. I plan on migrating that stuff to the raspberry pi as soon as I figure it out.</p>
 					<br>
 					<p>I want to get some Wordpress experience, and my mum wants a website for her little side business so hopefully I can use that as an opportunity to learn. Those CMS sites like Wordpress and Squarespace make web design look really easy, I could learn a thing or two.</p>
 					<br>
