--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@
 		</div>
 	</div>
 </body>
+<script>alert("moved to and updated at https://alexpegg.com")</script>
 <script>
 	sideButtonCallback = function() {
 	let buttActiveClass = "sideButtonActive";
